--- a/usr/lib/system/nginx/sites-enabled/system.conf
+++ b/usr/lib/system/nginx/sites-enabled/system.conf
@@ -15,8 +15,8 @@ server {
 server {
     listen 443 ssl http2;
 
-    ssl_certificate ssl/server.crt;
-    ssl_certificate_key ssl/server.key;
+    ssl_certificate /etc/letsencrypt/live/$ssl_server_name/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/$ssl_server_name/privkey.pem;
 
     location ^~ /.well-known/acme-challenge/ {
         allow all;
